updated markup with additional contents for pricing.

--- a/public/index.html
+++ b/public/index.html
@@ -519,7 +519,54 @@
             <!-- container -->
             <div class="container">
                 <div class="row wow animated fadeInUp" data-wow-duration="2s" data-wow-delay="2s">
-                    <div class="col-md-12"></div>
+                    <!-- create 3 equal columns -->
+                    <div class="col-md-4">
+                        <div class="pricing-box text-center">
+                            <h4 class="pricing-title">Basic</h4>
+                            <h3 class="pricing-value">AU 99<sup>$</sup></h3>
+                            <ul class="pricing-spec">
+                                <li><p>3 Project Consultation Sessions</p></li>
+                                <li><p>1 Project Development Per Year</p></li>
+                                <li><p>Limited Duration of Domain Support</p></li>
+                                <li><p>5GB Storage Support</p></li>
+                            </ul>
+                            <div class="pricing-btn">
+                                <a class="btn btn-lg btn-general btn-blue" href="#" role="button">Subscribe!</a>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col-md-4">
+                        <div class="pricing-box text-center">
+                            <h4 class="pricing-title">Premium</h4>
+                            <h3 class="pricing-value">AU 299<sup>$</sup></h3>
+                            <ul class="pricing-spec">
+                                <li><p>10 Project Consultation Sessions</p></li>
+                                <li><p>5 Project Development Per Year</p></li>
+                                <li><p>6-Month of Domain Support</p></li>
+                                <li><p>1TB Storage Support</p></li>
+                            </ul>
+                            <div class="pricing-btn">
+                                <a class="btn btn-lg btn-general btn-blue" href="#" role="button">Subscribe!</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="pricing-box text-center">
+                            <h4 class="pricing-title">Enterprise</h4>
+                            <h3 class="pricing-value">AU 699<sup>$</sup></h3>
+                            <ul class="pricing-spec">
+                                <li><p>Unlimited Project Consultation Sessions</p></li>
+                                <li><p>10 Project Development Per Year</p></li>
+                                <li><p>Unlimited Duration of Domain Support</p></li>
+                                <li><p>Unlimited Storage Support</p></li>
+                            </ul>
+                            <div class="pricing-btn">
+                                <a class="btn btn-lg btn-general btn-blue" href="#" role="button">Subscribe!</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- container end -->
