updated animation for individual pricing.

--- a/public/index.html
+++ b/public/index.html
@@ -518,9 +518,9 @@
 
             <!-- container -->
             <div class="container">
-                <div class="row wow animated fadeInUp" data-wow-duration="2s" data-wow-delay="2s">
+                <div class="row">
                     <!-- create 3 equal columns -->
-                    <div class="col-md-4">
+                    <div class="col-md-4 wow animated zoomIn" data-wow-duration="2s" data-wow-delay="2s">
                         <div class="pricing-box text-center">
                             <h4 class="pricing-title">Basic</h4>
                             <h3 class="pricing-value">AU 99<sup>$</sup></h3>
@@ -535,9 +535,9 @@
                             </div>
                         </div>
                     </div>
-                    
-                    <div class="col-md-4">
-                        <div class="pricing-box text-center">
+
+                    <div class="col-md-4 wow animated bounceInUp" data-wow-duration="2s" data-wow-delay="2s">
+                        <div class="pricing-box pricing-box-lg text-center">
                             <h4 class="pricing-title">Premium</h4>
                             <h3 class="pricing-value">AU 299<sup>$</sup></h3>
                             <ul class="pricing-spec">
@@ -547,12 +547,12 @@
                                 <li><p>1TB Storage Support</p></li>
                             </ul>
                             <div class="pricing-btn">
-                                <a class="btn btn-lg btn-general btn-blue" href="#" role="button">Subscribe!</a>
+                                <a class="btn btn-lg btn-general btn-white" href="#" role="button">Subscribe!</a>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-md-4 wow animated zoomIn" data-wow-duration="2s" data-wow-delay="2s">
                         <div class="pricing-box text-center">
                             <h4 class="pricing-title">Enterprise</h4>
                             <h3 class="pricing-value">AU 699<sup>$</sup></h3>
