added basic markup for stats section.

--- a/public/index.html
+++ b/public/index.html
@@ -574,6 +574,30 @@
         <!-- content-box end -->
     </section>
 
+    <!-- Stats section -->
+    <section id="stats">
+        <!-- stats-cover -->
+        <div class="stats-cover">
+            <!-- content-box -->
+            <div class="content-box">
+                <!-- title section -->
+                <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
+                    <h3>Our Proud Achievements!</h3>
+                    <div class="content-title-underline"></div>
+                </div>
+                <!-- title section end -->
+        
+                <!-- container -->
+                <div class="container">
+                    <div class="row wow animated fadeInUp" data-wow-duration="2s" data-wow-delay="2s"></div>
+                </div>
+                <!-- container end -->
+            </div>
+            <!-- content-box end -->
+        </div>
+        <!-- stats-cover end -->
+    </section>
+
     <!-- Temporary spaces -->
     <br><br><br><br><br>
 
