updated markup content for stats section.

--- a/public/index.html
+++ b/public/index.html
@@ -589,7 +589,40 @@
         
                 <!-- container -->
                 <div class="container">
-                    <div class="row wow animated fadeInUp" data-wow-duration="2s" data-wow-delay="2s"></div>
+                    <div class="row text-center wow animated bounceInLeft" data-wow-duration="2s" data-wow-delay="2s">
+                        <!-- create 4 equal columns -->
+                        <div class="col-md-3">
+                            <div class="stats-item">
+                                <i class="fa fa-users fa-5x" aria-hidden="true"></i>
+                                <h2><span class="counter">30</span><span>+</span></h2>
+                                <p>Our Valued Clients</p>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3">
+                            <div class="stats-item">
+                                <i class="fa fa-trophy fa-5x" aria-hidden="true"></i>
+                                <h2><span class="counter">10</span><span>+</span></h2>
+                                <p>Our Awards & Recognition</p>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3">
+                            <div class="stats-item">
+                                <i class="fa fa-heart-o fa-5x" aria-hidden="true"></i>
+                                <h2><span class="counter">2000</span><span>+</span></h2>
+                                <p>Likes</p>
+                            </div>
+                        </div>
+                        
+                        <div class="col-md-3">
+                            <div class="stats-item">
+                                <i class="fa fa-check fa-5x" aria-hidden="true"></i>
+                                <h2><span class="counter">500</span><span>+</span></h2>
+                                <p>Recommended</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <!-- container end -->
             </div>
