--- a/public/index.html
+++ b/public/index.html
@@ -577,11 +577,11 @@
     <!-- Stats section -->
     <section id="stats">
         <!-- stats-cover -->
-        <div class="stats-cover">
+        <div id="stats-cover" class="bg-parallax-effect-general">
             <!-- content-box -->
             <div class="content-box">
                 <!-- title section -->
-                <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
+                <div class="content-title content-title-white wow animated fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
                     <h3>Our Proud Achievements!</h3>
                     <div class="content-title-underline"></div>
                 </div>
@@ -638,14 +638,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="https://code.jquery.com/qunit/qunit-2.9.2.js"
-        integrity="sha256-EQ5rv6kPFPKQUYY+P4H6fm/le+yFRLVAb//2PfBswfE=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/qunit/qunit-2.9.2.js" integrity="sha256-EQ5rv6kPFPKQUYY+P4H6fm/le+yFRLVAb//2PfBswfE=" crossorigin="anonymous"></script>
     <script src="js/jquery-3.4.1.min.js"></script>
 
     <!-- bootstrap JS / latest compiled and minified JS -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
-        integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
-        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
     <script src="js/bootstrap/bootstrap.min.js"></script>
 
     <!-- wow JS -->
