added external script files.

--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,7 @@
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
 
     <!-- bootstrap CSS / latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-        integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
 
     <!-- animate CSS -->
@@ -653,6 +652,10 @@
 
     <!-- owl carousel JS -->
     <script src="js/owl-carousel/owl.carousel.min.js"></script>
+
+    <!-- counter plugins JS -->
+    <script src="js/counter/jquery.waypoints.min.js"></script>
+    <script src="js/counter/jquery.counterup.min.js"></script>
 
     <!-- custom functions JS -->
     <script src="js/customFunctions.js"></script>
