--- a/public/index.html
+++ b/public/index.html
@@ -22,22 +22,25 @@
     <!-- font awesome -->
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
 
-    <!-- bootstrap CSS / latest compiled and minified CSS -->
+    <!-- bootstrap css and latest compiled and minified css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
 
-    <!-- animate CSS -->
+    <!-- jquery ui -->
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+
+    <!-- animate css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="css/animate/animate.css">
 
-    <!-- magnific popup core CSS -->
+    <!-- magnific popup core css -->
     <link rel="stylesheet" href="css/magnific-popup/magnific-popup.css">
 
-    <!-- owl carousel 2 CSS -->
+    <!-- owl carousel 2 css -->
     <link rel="stylesheet" href="css/owl-carousel/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl-carousel/owl.theme.default.min.css">
 
-    <!-- style CSS -->
+    <!-- custom style css -->
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -633,31 +636,30 @@
     <!-- Temporary spaces -->
     <br><br><br><br><br>
 
-    <!-- jQuery JS -->
+    <!-- jquery js -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="https://code.jquery.com/qunit/qunit-2.9.2.js" integrity="sha256-EQ5rv6kPFPKQUYY+P4H6fm/le+yFRLVAb//2PfBswfE=" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/qunit/qunit-2.9.2.js" integrity="sha256-EQ5rv6kPFPKQUYY+P4H6fm/le+yFRLVAb//2PfBswfE=" crossorigin="anonymous"></script> -->
     <script src="js/jquery-3.4.1.min.js"></script>
 
-    <!-- bootstrap JS / latest compiled and minified JS -->
+    <!-- bootstrap js / latest compiled and minified js -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
     <script src="js/bootstrap/bootstrap.min.js"></script>
 
-    <!-- wow JS -->
+    <!-- wow js -->
     <script src="js/wow/wow.min.js"></script>
 
-    <!-- magnific popup core JS -->
+    <!-- magnific popup core js -->
     <script src="js/magnific-popup/jquery.magnific-popup.min.js"></script>
 
-    <!-- owl carousel JS -->
+    <!-- owl carousel js -->
     <script src="js/owl-carousel/owl.carousel.min.js"></script>
 
-    <!-- counter plugins JS -->
+    <!-- counter plugins js -->
     <script src="js/counter/jquery.waypoints.min.js"></script>
     <script src="js/counter/jquery.counterup.min.js"></script>
 
-    <!-- custom functions JS -->
+    <!-- custom functions js -->
     <script src="js/customFunctions.js"></script>
 </body>
 
