updated markup content for clients section.

--- a/public/index.html
+++ b/public/index.html
@@ -633,6 +633,27 @@
         <!-- stats-cover end -->
     </section>
 
+    <!-- Clients section -->
+    <section class="clients">
+        <!-- content-box -->
+        <div class="content-box">
+            <!-- title section -->
+            <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
+                <h3>Our Valued Clients</h3>
+                <div class="content-title-underline"></div>
+            </div>
+            <!-- title section end -->
+
+             <!-- container -->
+             <div class="container">
+                <div class="row">
+                </div>
+             </div>
+             <!-- container end -->
+        </div>
+        <!-- content-box end -->
+    </section>
+
     <!-- Temporary spaces -->
     <br><br><br><br><br>
 
