added comments of authoring styles for vesco system site.

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- 
+    Author: Muhammad Hafidz Misrudin
+    Description: Proprietary (no permission for copy or redistribution)
+    Date written: 09/11/2019
+    Date last updated: 01/07/2020
+ -->
 <head>
 
     <!-- required meta tags -->
