updated markup content of clients with logos.

--- a/public/index.html
+++ b/public/index.html
@@ -651,7 +651,36 @@
 
              <!-- container -->
              <div class="container">
-                <div class="row">
+                <div class="row wow animated fadeInUp" data-wow-duration="2s" data-wow-delay="2s">
+                    <div class="col-md-12">
+                        <!-- main wrapper of client list -->
+                        <div id="clients">
+                            <div class="client">
+                                <img src="img/client/logos/logo-1.jpg" class="img-responsive" alt="client">
+                            </div>
+                            <div class="client">
+                                <img src="img/client/logos/logo-2.jpg" class="img-responsive" alt="client">
+                            </div>
+                            <div class="client">
+                                <img src="img/client/logos/logo-3.jpg" class="img-responsive" alt="client">
+                            </div>
+                            <div class="client">
+                                <img src="img/client/logos/logo-4.jpg" class="img-responsive" alt="client">
+                            </div>
+                            <div class="client">
+                                <img src="img/client/logos/logo-5.jpg" class="img-responsive" alt="client">
+                            </div>
+                            <div class="client">
+                                <img src="img/client/logos/logo-6.jpg" class="img-responsive" alt="client">
+                            </div>
+                            <div class="client">
+                                <img src="img/client/logos/logo-7.jpg" class="img-responsive" alt="client">
+                            </div>
+                            <div class="client">
+                                <img src="img/client/logos/logo-8.jpg" class="img-responsive" alt="client">
+                            </div>
+                        </div>
+                    </div>
                 </div>
              </div>
              <!-- container end -->
