--- a/public/index.html
+++ b/public/index.html
@@ -651,7 +651,7 @@
 
              <!-- container -->
              <div class="container">
-                <div class="row wow animated fadeInUp" data-wow-duration="2s" data-wow-delay="2s">
+                <div class="row wow animated bounceInLeft" data-wow-duration="2s" data-wow-delay="2s">
                     <div class="col-md-12">
                         <!-- main wrapper of client list -->
                         <div id="clients">
