added owl carousel effect function for clients section.

--- a/public/index.html
+++ b/public/index.html
@@ -654,7 +654,7 @@
                 <div class="row wow animated bounceInLeft" data-wow-duration="2s" data-wow-delay="2s">
                     <div class="col-md-12">
                         <!-- main wrapper of client list -->
-                        <div id="clients">
+                        <div id="clients-list" class="owl-carousel owl-theme">
                             <div class="client">
                                 <img src="img/client/logos/logo-1.jpg" class="img-responsive" alt="client">
                             </div>
