--- a/public/index.html
+++ b/public/index.html
@@ -688,6 +688,24 @@
         <!-- content-box end -->
     </section>
 
+    <!-- Footer section -->
+    <footer>
+        <!-- main wrapper of contact -->
+        <div id="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        Left Side Contact
+                    </div>
+
+                    <div class="col-md-6">
+                        Right Side Contact
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <!-- Temporary spaces -->
     <br><br><br><br><br>
 
