updated description for left contact side section.

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
                 <div id="home-content-box-inner">
 
                     <div id="home-heading" class="animated bounceIn">
-                        <h3>Hello, We Are Vesco System Co.!</h3>
+                        <h3>Hello, We Are Vesco System Corp!</h3>
                         <h4>The Most Sophisticated Web Design & Digital Consulting Agency</h4>
                     </div>
 
@@ -695,7 +695,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        Left Side Contact
+                        <!-- main wrapper for left side contact -->
+                        <div id="contact-left">
+                            <h3>VESCO SYSTEM CORP</h3>
+                            <p>
+                               We believe in <strong>modern</strong>, <strong>sophisticated</strong> and <strong>advanced</strong> design of our project deliveries and responsive approach. 
+                               Browse us and our proud work of our company
+                            </p>
+                        </div>
                     </div>
 
                     <div class="col-md-6">
