updated contact left section for markup.

--- a/public/index.html
+++ b/public/index.html
@@ -697,11 +697,44 @@
                     <div class="col-md-6">
                         <!-- main wrapper for left side contact -->
                         <div id="contact-left">
-                            <h3>VESCO SYSTEM CORP</h3>
+                            <h3>VESCO SYSTEM CORP.</h3>
                             <p>
-                               We believe in <strong>modern</strong>, <strong>sophisticated</strong> and <strong>advanced</strong> design of our project deliveries and responsive approach. 
+                               We believe in <strong>modern</strong> and <strong>sophisticated</strong> and <strong>advanced</strong> design solutions for our projects and responsive approach. 
                                Browse us and our proud work of our company
                             </p>
+                            <div id="contact-info">
+                                <!-- address -->
+                                <address>
+                                    <strong>Head Office:</strong><br>
+                                    <p>
+                                        3/25 Park Road West, Dutton Park<br>
+                                        4102, Brisbane QLD                                    
+                                    </p>
+                                </address>
+                                <!-- phone & email contact -->
+                                <div class="phone-fax-email">
+                                    <p>
+                                        <strong>Phone:</strong><span>07 3138 2000</span>
+                                        <strong>International:</strong><span>+61 7 3138 2000</span>
+                                        <strong>Email:</strong><span>sayhi@vescosystem.com.au</span>
+                                    </p>
+                                </div>
+                                <!-- social media list -->
+                                <ul class="social-list">
+                                    <li>
+                                        <a href="#" class="social-icon icon-white"><i class="fa fa-facebook"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="social-icon icon-white"><i class="fa fa fa-instagram"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="social-icon icon-white"><i class="fa fa-linkedin"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="social-icon icon-white"><i class="fa fa-youtube-play"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
 
