updated contact right section for markup.

--- a/public/index.html
+++ b/public/index.html
@@ -736,10 +736,23 @@
                                 </ul>
                             </div>
                         </div>
+                        <!-- main wrapper for left side contact -->
                     </div>
 
                     <div class="col-md-6">
-                        Right Side Contact
+                        <!-- main wrapper for right side contact -->
+                        <div id="contact-right">
+                            <h3>CONTACT US</h3>
+                            <form action="#">
+                                <input type="text" name="full-name" placeholder="Full Name" class="form-control">
+                                <input type="text" name="email" placeholder="Email Address" class="form-control">
+                                <textarea name="message" id="" cols="30" rows="10" placeholder="Message..." class="form-control"></textarea>
+                                <div id="send-btn">
+                                    <a href="#" class="btn btn-lg btn-general btn-white" role="button">SEND</a>
+                                </div>
+                            </form>
+                        </div>
+                        <!-- main wrapper for right side contact -->
                     </div>
                 </div>
             </div>
