updated css styles for contact left section.

--- a/public/index.html
+++ b/public/index.html
@@ -714,27 +714,27 @@
                                 <!-- phone & email contact -->
                                 <div class="phone-fax-email">
                                     <p>
-                                        <strong>Phone:</strong><span>07 3138 2000</span>
-                                        <strong>International:</strong><span>+61 7 3138 2000</span>
-                                        <strong>Email:</strong><span>sayhi@vescosystem.com.au</span>
+                                        <strong>Phone:</strong><span> 07 3138 2000</span><br>
+                                        <strong>International:</strong><span> +61 7 3138 2000</span><br>
+                                        <strong>Email:</strong><span> sayhi@vescosystem.com.au</span><br>
                                     </p>
                                 </div>
-                                <!-- social media list -->
-                                <ul class="social-list">
-                                    <li>
-                                        <a href="#" class="social-icon icon-white"><i class="fa fa-facebook"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="social-icon icon-white"><i class="fa fa fa-instagram"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="social-icon icon-white"><i class="fa fa-linkedin"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="social-icon icon-white"><i class="fa fa-youtube-play"></i></a>
-                                    </li>
-                                </ul>
                             </div>
+                            <!-- social media list -->
+                            <ul class="social-list">
+                                <li>
+                                    <a href="#" class="social-icon icon-white"><i class="fa fa-facebook"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="social-icon icon-white"><i class="fa fa fa-instagram"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="social-icon icon-white"><i class="fa fa-linkedin"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="social-icon icon-white"><i class="fa fa-youtube-play"></i></a>
+                                </li>
+                            </ul>
                         </div>
                         <!-- main wrapper for left side contact -->
                     </div>
